Insert Message Here

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <a href="https://github.com/john14343" target="_blank" class="project__description--link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.yourwebsite.com" class="project__description--link">
+                        <a href="#" class="project__description--link">
                             <i class="fas fa-link"></i>
                         </a>
                         </div>
@@ -149,7 +149,7 @@
                             <a href="https://github.com/john14343" target="_blank" class="project__description--link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.yourwebsite.com" class="project__description--link">
+                        <a href="#" class="project__description--link">
                             <i class="fas fa-link"></i>
                         </a>
                         </div>
@@ -171,7 +171,7 @@
                             <a href="https://github.com/john14343" target="_blank" class="project__description--link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.yourwebsite.com" class="project__description--link">
+                        <a href="#" class="project__description--link">
                             <i class="fas fa-link"></i>
                         </a>
                         </div>
